fix: navigation tablet

--- a/src/styles/components/navigation.styl
+++ b/src/styles/components/navigation.styl
@@ -53,11 +53,26 @@
       margin 0
       padding 0
 
-  @media all and (min-width 501px) and (max-width 1200px)
-    display block
-    text-align center
+  @media all and (min-width 501px) and (max-width 750px)
+    align-content center
+    align-items center
+    display flex
+    justify-content center
+    width 100%
+
+    &__link
+      margin 0 1rem !important
+
+    &__image
+      display none
+
+  @media all and (min-width 751px) and (max-width 1200px)
+    align-content center
+    align-items center
+    display flex
     margin 0 auto
     padding 0
+    text-align center
     width 100%
 
     &__image
@@ -66,11 +81,6 @@
 
     &__link
       margin 0 !important
-
-  @media all and (min-width 501px) and (max-width 1200px)
-    align-content center
-    align-items center
-    display flex
 
     &__link
       display block
